# pubmed-paper-fetcher

./: README.md  pyproject.toml  results.csv
src/get_papers_list/: __main__.py  papers.py
